--- a/_config.yml
+++ b/_config.yml
@@ -54,13 +54,13 @@ about_content: | # this will include new lines to allow paragraphs
   Dear Sir/Madam,
   
   My name is Khanh, and I'm a careful embedded software engineer with more than 8 years of experience.
-  In addition, I also have 2 years experience of working as a DevOps engineer guy.
+  In addition, I have 2 years experience of working as a DevOps engineer guy.
   Don't have a lot on my plate like before, I'm currently just teaching some courses relating to programming at the university level.
   
   I enjoy thinking deeply before writing code as well as having a curious mindset on how the different components fit together.
   I have worked with various languages, IDEs, Development Boards, Peripherals, and I'm really inspired by opportunities to work with something new but practical.
 
-  Moreover, I also gained a strong background in algorithms throughout a couple of years as a researcher.
+  Besides, I gained a strong background in algorithms throughout a couple of years as a researcher.
   
   Working in your company will be my best opportunity to show you my best. I'm looking forward to hearing answer from you soon.
 
