--- a/_config.yml
+++ b/_config.yml
@@ -164,7 +164,7 @@ content:
 
 # Footer
 footer_show_references: true
-# references_title: reenor.github.io
+references_title: reenor.github.io
 
 # Build settings
 remote_theme: sproogen/resume-theme
