--- a/_config.yml
+++ b/_config.yml
@@ -111,8 +111,8 @@ content:
         description: | # this will include new lines to allow paragraphs
           + Led an IoT team to research and build product series including [LEANWELL IoT and LEANWELL IoT Wifi,](https://www.leanwell.co/products/iot/internet-of-things-iot-factory)
           [Wifi Temperature and Humidity Sensor](https://www.leanwell.co/products/iot/hard-ware-2), Wifi AirQuality Sensor.
-          + And deployed 500+ above products in factories of three clients.
-          + Managed to bridge the gap between software development team and IT operation guys at client site: deploy software release as quick as possible,
+          + And deployed 500+ above products in factories for three clients.
+          + Managed to bridge the gap between the software development team and IT operation guys at the client site: deploy software releases as quick as possible,
           ensure services are easily scalable as well as having ability of high availability, protect servers against hackers and viruses.
           + Played the role of purchasing relating to various electronic components.
           + Set up the production process of all company products.
