--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: reedus.chung@gmail.com
 phone: (+84) 907060401
 Address: Ho Chi Minh, Vietnam
 
-# website: www.github.com/sproogen/resume-theme
+website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
 darkmode: false
