--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,7 @@ title: Senior Embedded Software & DevOps Engineer
 email: reedus.chung@gmail.com
 phone: (+84) 907060401
 Address: Ho Chi Minh, Vietnam
-
-website: www.github.com/sproogen/resume-theme
+website: https://reenor.github.io
 
 # Dark Mode (true/false/never)
 darkmode: false
