--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,11 @@ content:
         quote: >
           
         description: | # this will include new lines to allow paragraphs
+  
+  - title: Tech stack # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
