--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,15 @@ content:
   - title: Tech stack # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      
+      - layout: right
+        title: Development kits
+        caption: 10/2015 - Now
+        # link: https://en.uit.edu.vn
+        # quote: >
+          
+        description: | # this will include new lines to allow paragraphs
+          + a
+          + a
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
