--- a/_config.yml
+++ b/_config.yml
@@ -89,12 +89,16 @@ content:
       - layout: left
         title:  
         sub_title: Development boards
-        caption: 10/2015 - Now
+        # caption: 10/2015 - Now
         # link: https://en.uit.edu.vn
         # quote: >
-          
         description: | # this will include new lines to allow paragraphs
           + a
+
+      - layout: left
+        # title:  
+        sub_title: Development boards
+        description: | # this will include new lines to allow paragraphs
           + a
 
   - title: Experience # Title for the section
