--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ content:
     content:
       - layout: left
         # title:
-        sub_title: Development boards, MCUs, Modules
+        sub_title: Development boards, MCUs, and Modules
         # caption: 10/2015 - Now
         # link: https://en.uit.edu.vn
         # quote: >
