--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/me_cross.jpg
+about_profile_image: images/me_origin.jpg
 about_content: | # this will include new lines to allow paragraphs
   Dear Sir/Madam,
   
